--- a/Vocable/Features/Onboarding/TrackingOnboarding.storyboard
+++ b/Vocable/Features/Onboarding/TrackingOnboarding.storyboard
@@ -19,19 +19,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="FOC-5s-ZHg">
-                                <rect key="frame" x="47" y="363" width="320" height="170.5"/>
+                                <rect key="frame" x="47" y="375.5" width="320" height="145"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's learn how tracking works! Slowly move your head until you can point the dot at the top left corner." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pab-vN-0Rl">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="110.5"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="320" id="FDH-kl-YCd"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's learn how tracking works!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2gw-jN-ifB">
+                                        <rect key="frame" x="13.5" y="0.0" width="293" height="26.5"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <color key="textColor" name="DefaultFontColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slowly move your head until you can point the dot at the top left corner." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pab-vN-0Rl">
+                                        <rect key="frame" x="0.0" y="42.5" width="320" height="42.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="320" id="FDH-kl-YCd"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <color key="textColor" name="DefaultFontColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Lg-IJ-QoM" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                        <rect key="frame" x="88" y="126.5" width="144" height="44"/>
+                                        <rect key="frame" x="88" y="101" width="144" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="DLr-cR-MXh"/>
                                             <constraint firstAttribute="width" constant="144" id="svd-UV-Aoe"/>
@@ -46,7 +52,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Lk-bf-WQV" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44" width="66" height="34"/>
+                                <rect key="frame" x="0.0" y="44" width="82" height="38"/>
                                 <state key="normal" title="Top Left">
                                     <color key="titleColor" name="DefaultFontColor"/>
                                 </state>
@@ -55,7 +61,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C7x-Op-ZST" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="337" y="44" width="77" height="34"/>
+                                <rect key="frame" x="321" y="44" width="93" height="38"/>
                                 <state key="normal" title="Top Right">
                                     <color key="titleColor" name="DefaultFontColor"/>
                                 </state>
@@ -64,7 +70,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FpR-79-IcC" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="862" width="95" height="34"/>
+                                <rect key="frame" x="0.0" y="858" width="111" height="38"/>
                                 <state key="normal" title="Bottom Left">
                                     <color key="titleColor" name="DefaultFontColor"/>
                                 </state>
@@ -73,7 +79,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aow-wI-Bdv" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="308" y="862" width="106" height="34"/>
+                                <rect key="frame" x="292" y="858" width="122" height="38"/>
                                 <state key="normal" title="Bottom Right">
                                     <color key="titleColor" name="DefaultFontColor"/>
                                 </state>
@@ -102,6 +108,7 @@
                         <outlet property="leadingBottom" destination="FpR-79-IcC" id="HS5-T8-xY8"/>
                         <outlet property="leadingTop" destination="2Lk-bf-WQV" id="FIg-sv-BJA"/>
                         <outlet property="onboardingLabel" destination="Pab-vN-0Rl" id="S6H-AY-M1R"/>
+                        <outlet property="titleLabel" destination="2gw-jN-ifB" id="pQ7-dW-haV"/>
                         <outlet property="trailingBottom" destination="aow-wI-Bdv" id="h3L-8H-1xI"/>
                         <outlet property="trailingTop" destination="C7x-Op-ZST" id="ac3-ai-WMe"/>
                     </connections>
@@ -113,19 +120,19 @@
     </scenes>
     <designables>
         <designable name="2Lk-bf-WQV">
-            <size key="intrinsicContentSize" width="66" height="34"/>
+            <size key="intrinsicContentSize" width="82" height="38"/>
         </designable>
         <designable name="9Lg-IJ-QoM">
-            <size key="intrinsicContentSize" width="99" height="34"/>
+            <size key="intrinsicContentSize" width="115" height="38"/>
         </designable>
         <designable name="C7x-Op-ZST">
-            <size key="intrinsicContentSize" width="77" height="34"/>
+            <size key="intrinsicContentSize" width="93" height="38"/>
         </designable>
         <designable name="FpR-79-IcC">
-            <size key="intrinsicContentSize" width="95" height="34"/>
+            <size key="intrinsicContentSize" width="111" height="38"/>
         </designable>
         <designable name="aow-wI-Bdv">
-            <size key="intrinsicContentSize" width="106" height="34"/>
+            <size key="intrinsicContentSize" width="122" height="38"/>
         </designable>
     </designables>
     <resources>
